[gd_scene load_steps=8 format=3 uid="uid://broi77p8ppycn"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_olb0t"]
[ext_resource type="Texture2D" uid="uid://botwhlnlt1yqd" path="res://Sprites/enemy.png" id="2_nxcrp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1w0r6"]
atlas = ExtResource("2_nxcrp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i2f0"]
atlas = ExtResource("2_nxcrp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr1nm"]
atlas = ExtResource("2_nxcrp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pe47n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w0r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i2f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr1nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i2f0")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8hfj"]
size = Vector2(12, 15)

[node name="Enemy" type="CharacterBody2D"]
process_mode = 1
collision_layer = 4
collision_mask = 5
script = ExtResource("1_olb0t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_pe47n")
animation = &"Run"
frame_progress = 0.255375

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_k8hfj")

[node name="RayCast1" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(7, 0)
collision_mask = 5

[node name="RayCast2" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(-7, 0)
collision_mask = 5

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="hit" from="." to="." method="_on_hit"]
